--- a/jupiter-build/action.yaml
+++ b/jupiter-build/action.yaml
@@ -1,12 +1,10 @@
 name: "Run Build and Test"
 description: "Runs a gradle build along with any migrations using flyway"
 inputs:
-  java-version:
+  java_version:
     description: "The version of Java to run on."
     required: true
     default: "8"
 runs:
   using: "docker"
   image: "Dockerfile"
-  args:
-    - ${{inputs.java-version}}
