Change base image for dockerfile.

--- a/jupiter-build/Dockerfile
+++ b/jupiter-build/Dockerfile
@@ -1,6 +1,4 @@
-ARG BASE_IMAGE=openjdk${INPUT_JAVA_VERSION}-alpine
+FROM alpine
 
-FROM ${BASE_IMAGE}
-
-ARG BASE_IMAGE=openjdk${INPUT_JAVA_VERSION}-alpine
+ARG BASE_IMAGE=openjdk-${INPUT_JAVA_VERSION}-jdk
 RUN echo $BASE_IMAGE
