--- a/jupiter-build/Dockerfile
+++ b/jupiter-build/Dockerfile
@@ -2,4 +2,4 @@ FROM alpine
 
 COPY entrypoint.sh /entrypoint.sh
 
-ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT export JAVA_VERSION="$INPUT_JAVA_VERSION"; /entrypoint.sh
