Add arg and env to Dockerfile.

--- a/jupiter-build/Dockerfile
+++ b/jupiter-build/Dockerfile
@@ -1,5 +1,8 @@
 FROM alpine
 
+ARG JAVA_VERSION=${INPUT_JAVA_VERSION}
+ENV JAVA_VERSION=${JAVA_VERSION}
+
 COPY entrypoint.sh /entrypoint.sh
 
-ENTRYPOINT export JAVA_VERSION="$INPUT_JAVA_VERSION"; /entrypoint.sh
+ENTRYPOINT /entrypoint.sh
