--- a/jupiter-build/action.yaml
+++ b/jupiter-build/action.yaml
@@ -4,7 +4,7 @@ inputs:
   java_version:
     description: "The version of Java to run on."
     required: true
-    default: "8"
+    default: '8'
 runs:
   using: "docker"
   image: "Dockerfile"
