Check if named is working.

--- a/jupiter-build/Dockerfile
+++ b/jupiter-build/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine
 
-ARG JAVA_VERSION=${INPUT_JAVA_VERSION}
+ARG JAVA_VERSION=$1
 ENV JAVA_VERSION=${JAVA_VERSION}
 
 COPY entrypoint.sh /entrypoint.sh
