Try putting variable in string.

--- a/jupiter-build/Dockerfile
+++ b/jupiter-build/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine
 
-ARG JAVA_VERSION=$1
+ARG JAVA_VERSION="${INPUT_JAVA_VERSION}"
 ENV JAVA_VERSION=${JAVA_VERSION}
 
 COPY entrypoint.sh /entrypoint.sh
