Try using value in Dockerfile.

--- a/jupiter-build/Dockerfile
+++ b/jupiter-build/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine
 
-ARG JAVA_VERSION="${INPUT_JAVA_VERSION}"
+ARG JAVA_VERSION="8${INPUT_JAVA_VERSION}"
 ENV JAVA_VERSION=${JAVA_VERSION}
 
 COPY entrypoint.sh /entrypoint.sh
