--- a/jupiter-build/action.yaml
+++ b/jupiter-build/action.yaml
@@ -1,7 +1,7 @@
 name: "Run Build and Test"
 description: "Runs a gradle build along with any migrations using flyway"
 inputs:
-  JAVA_VERSION:
+  javaversion:
     description: "The version of Java to run on."
     required: true
     default: '8'
