Cd to / before running script.

--- a/jupiter-build/Dockerfile
+++ b/jupiter-build/Dockerfile
@@ -1,8 +1,8 @@
 FROM alpine
 
-COPY entrypoint.sh entrypoint.sh
-COPY build.sh build.sh
+COPY entrypoint.sh /entrypoint.sh
+COPY build.sh /build.sh
 
 RUN pwd
 
-ENTRYPOINT entrypoint.sh
+ENTRYPOINT /entrypoint.sh
