See github workspace.

--- a/jupiter-build/Dockerfile
+++ b/jupiter-build/Dockerfile
@@ -4,5 +4,6 @@ COPY entrypoint.sh ${GITHUB_WORKSPACE}/entrypoint.sh
 COPY build.sh ${GITHUB_WORKSPACE}/build.sh
 
 RUN pwd
+RUN echo ${GITHUB_WORKSPACE}
 
 ENTRYPOINT entrypoint.sh
