Set env variable.

--- a/jupiter-build/Dockerfile
+++ b/jupiter-build/Dockerfile
@@ -1,5 +1,7 @@
 FROM alpine
 
+ENV GITHUB_WORKSPACE='/github/workspace'
+
 COPY entrypoint.sh ${GITHUB_WORKSPACE}/entrypoint.sh
 COPY build.sh ${GITHUB_WORKSPACE}/build.sh
 
