Copy build file before execution.

--- a/jupiter-build/Dockerfile
+++ b/jupiter-build/Dockerfile
@@ -1,11 +1,6 @@
 FROM alpine
 
-ENV GITHUB_WORKSPACE='/github/workspace'
+COPY entrypoint.sh /entrypoint.sh
+COPY build.sh /build.sh
 
-COPY entrypoint.sh ${GITHUB_WORKSPACE}/entrypoint.sh
-COPY build.sh ${GITHUB_WORKSPACE}/build.sh
-
-RUN pwd
-RUN echo ${GITHUB_WORKSPACE}
-
-ENTRYPOINT ${GITHUB_WORKSPACE}/entrypoint.sh
+ENTRYPOINT /entrypoint.sh
